<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.theta.xi.thetaboard.MainActivity">
    <item
        android:id="@+id/settingsFragment"
        android:orderInCategory="100"
        android:title="@string/settings_button_txt"
        app:showAsAction="never" />
    <item
        android:id="@+id/bulletinBoardsFragment"
        android:orderInCategory="100"
        android:title="@string/bulletin_boards_button_txt"
        app:showAsAction="never" />
    <item
        android:id="@+id/manageBoardsFragment"
        android:orderInCategory="100"
        android:title="@string/manage_boards_button_txt"
        app:showAsAction="never" />
</menu>